--- a/project/LICENSE.j2
+++ b/project/LICENSE.j2
@@ -186,7 +186,7 @@
       same "printed page" as the copyright notice for easier
       identification within third-party archives.
 
-   Copyright {{_year}}-Present {{author_name}}
+   Copyright {{current_year}}-Present {{author_name}}
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
