--- a/project/.github/workflows/checks.yaml.j2
+++ b/project/.github/workflows/checks.yaml.j2
@@ -22,6 +22,25 @@ jobs:
         uses: actions/setup-go@v4
         with:
           go-version: '{{go_version}}'
+
+      # cache go modules
+      - uses: actions/cache@v4
+        with:
+          # In order:
+          # * Module download cache
+          # * Build cache (Linux)
+          # * Build cache (Mac)
+          # * Build cache (Windows)
+          path: |
+            ~/go/pkg/mod
+            ~/.cache/go-build
+            ~/Library/Caches/go-build
+            %LocalAppData%\go-build
+            bin
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Run Golang Lint Command
         run: |
           make lint
