Added basic gorelease integration

--- a/project/.github/workflows/checks.yaml.j2
+++ b/project/.github/workflows/checks.yaml.j2
@@ -1,13 +1,19 @@
 name: Checks
 
+concurrency:
+  group: {% raw %}${{ github.head_ref || github.ref_name }}{% endraw %}
+  cancel-in-progress: true
+
 on:
   push:
     branches:
       - main
+      - master
 
   pull_request:
     branches:
       - main
+      - master
 
 jobs:
   lint:
@@ -84,7 +90,10 @@ jobs:
           make gen-check
 
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest, windows-latest]
+    {% raw %}runs-on: ${{ matrix.os }}{% endraw %}
     name: Build Binary
     steps:
       - name: Checkout Code
@@ -96,5 +105,4 @@ jobs:
           go-version: '{{go_version}}'
 
       - name: Build The Shop Binary
-        run: |
-          make build
+        run:  make build
