--- a/project/Makefile.j2
+++ b/project/Makefile.j2
@@ -1,4 +1,8 @@
-BIN_DIR=$(PWD)/tmp/bin
+.PHONY: help
+help:
+	@echo "🛠️ Dev Commands\n"
+	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+
 VERSION_PACKAGE := {{module_name}}/internal/version
 VERSION ?= $(shell git describe --long --always --abbrev=15)
 COMMIT ?= $(shell git describe --dirty --long --always --abbrev=15)
@@ -7,10 +11,7 @@ VERSION ?= "latest"
 
 LDFLAGS_COMMON := "-X $(VERSION_PACKAGE).GitCommit=$(COMMIT) -X $(VERSION_PACKAGE).Version=$(VERSION) -X $(VERSION_PACKAGE).BuildDate=$(BUILD_DATE)"
 
-.PHONY: help
-help:
-	@echo "🛠️ Dev Commands\n"
-	@grep -E '^[a-zA-Z_-]+:.*?## .*$$' $(MAKEFILE_LIST) | sort | awk 'BEGIN {FS = ":.*?## "}; {printf "\033[36m%-30s\033[0m %s\n", $$1, $$2}'
+BIN_DIR=$(PWD)/tmp/bin
 
 .PHONY: install-tools
 install-tools: ## Install static checkers & other binaries
@@ -20,6 +21,7 @@ install-tools: ## Install static checkers & other binaries
 	@GOBIN=$(BIN_DIR) go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
 	@GOBIN=$(BIN_DIR) go install github.com/g4s8/envdoc@latest
 	@GOBIN=$(BIN_DIR) go install github.com/denis-tingaikin/go-header/cmd/go-header@latest
+	@GOBIN=$(BIN_DIR) go install github.com/goreleaser/goreleaser/v2@latest
 
 .PHONY: lint
 lint: install-tools ## Lint the source code
@@ -32,6 +34,8 @@ lint: install-tools ## Lint the source code
 	@go vet ./...
 	@echo "🧹 GoCI Lint.."
 	@$(BIN_DIR)/golangci-lint run ./...
+	@echo "🧹Check GoReleaser.."
+	@$(BIN_DIR)/goreleaser check
 
 .PHONY: run
 run: ## Run Frens
@@ -56,3 +60,33 @@ gen-check: gen ## Check if Go code needs to be generated
 .PHONY: test
 test: ## Run tests
 	@go test -v -count=1 -race -shuffle=on -coverprofile=coverage.txt ./...
+
+VENDOR ?= {{author_gh_username}}
+PROJECT ?= {{project_name}}
+SOURCE ?= https://github.com/{{author_gh_username}}/{{project_name}}
+LICENSE ?= Apache-2.0
+DESCRIPTION ?= "{{project_descr}}"
+REPOSITORY ?= {{author_gh_username}}/{{project_name}}
+
+.PHONY: image
+image: ## Build docker image
+	@echo "🛠️ Building image.."
+	@echo "- Version: $(VERSION)"
+	@echo "- Commit: $(COMMIT)"
+	@echo "- Build Date: $(BUILD_DATE)"
+	@docker build . -t $(REPOSITORY):$(VERSION) -f Dockerfile \
+	--build-arg VERSION="$(VERSION)" \
+	--build-arg COMMIT="$(COMMIT)" \
+	--build-arg BUILD_DATE="$(BUILD_DATE)" \
+	--label=org.opencontainers.image.vendor="$(VENDOR)" \
+	--label=org.opencontainers.image.title="$(PROJECT)" \
+	--label=org.opencontainers.image.revision="$(COMMIT)" \
+	--label=org.opencontainers.image.version="$(VERSION)" \
+	--label=org.opencontainers.image.created="$(BUILD_DATE)" \
+	--label=org.opencontainers.image.source="$(SOURCE)" \
+	--label=org.opencontainers.image.licenses="$(LICENSE)" \
+	--label=org.opencontainers.image.description=$(DESCRIPTION)
+
+.PHONY: image-lint
+image-lint: ## Lint Dockerfile
+    @hadolint Dockerfile
