--- a/project/internal/version/version.go.j2
+++ b/project/internal/version/version.go.j2
@@ -7,6 +7,8 @@ import (
 
 const AppName = "{{project_name}}"
 
+var Version = "dev"
+
 // GitCommit is the commit hash of the current version.
 var GitCommit = "unknown"
 
@@ -16,5 +18,5 @@ var BuildDate = "unknown"
 var FullVersion string
 
 func init() {
-	FullVersion = fmt.Sprintf("%s (%s, runtime: %s)", GitCommit, BuildDate, runtime.Version())
+	FullVersion = fmt.Sprintf("%s (commit: %s, %s, runtime: %s)", Version, GitCommit, BuildDate, runtime.Version())
 }
