--- a/project/main.go.j2
+++ b/project/main.go.j2
@@ -5,8 +5,8 @@ import (
 	"log"
 	"os"
 
-	"github.com/roma-glushko/goproj/cmd"
-	"github.com/roma-glushko/goproj/internal/version"
+	"{{module_name}}/cmd"
+	"{{module_name}}/internal/version"
 )
 
 const Copyright = `{{_year}}-Present, {{author_name}} (c)`
