--- a/project/.goreleaser.yml.j2
+++ b/project/.goreleaser.yml.j2
@@ -41,7 +41,26 @@ builds:
         goarch: arm
 
 changelog:
-  skip: true
+  use: github
+  sort: asc
+  abbrev: -1
+  filters:
+    exclude:
+      - '^docs:'
+      - '^test:'
+  groups:
+    - title: 'Breaking changes'
+      regexp: '^.*?(\([[:word:]]+\))??!:.+$'
+      order: 0
+    - title: 'Enhancements'
+      regexp: '^.*?feat(\([[:word:]]+\))??!?:.+$'
+      order: 1
+    - title: 'Fixes'
+      regexp: '^.*?fix(\([[:word:]]+\))??!?:.+$'
+      order: 2
+    - title: 'Internal'
+      regexp: '^.+$'
+      order: 999
 
 archives:
   - id: {{project_name}}
