Upgraded goreleaser & setup-go tasks, added copyright tasks, fixed reviewdog permissions

--- a/project/Makefile.j2
+++ b/project/Makefile.j2
@@ -61,6 +61,12 @@ gen-check: gen ## Check if Go code needs to be generated
 test: ## Run tests
 	@go test -v -count=1 -race -shuffle=on -coverprofile=coverage.txt ./...
 
+copyright: ## Apply copyrights to all files
+    @echo "🧹 Applying license headers"
+    @docker run  --rm -v $(CURDIR):/github/workspace ghcr.io/apache/skywalking-eyes/license-eye:4021a396bf07b2136f97c12708476418a8157d72 -v info -c .licenserc.yaml header fix
+
+license: copyright
+
 VENDOR ?= {{author_gh_username}}
 PROJECT ?= {{project_name}}
 SOURCE ?= https://github.com/{{author_gh_username}}/{{project_name}}
