--- a/project/.goreleaser.yml.j2
+++ b/project/.goreleaser.yml.j2
@@ -1,3 +1,4 @@
+version: 2
 project_name: {{project_name}}
 
 before:
@@ -65,10 +66,12 @@ changelog:
 archives:
   - id: {{project_name}}
     {% raw %}name_template: '{{ .ProjectName }}_v{{ .Tag }}_{{ .Os }}_{{ .Arch }}{{ if .Arm }}v{{ .Arm }}{{ end }}'{% endraw %}
-    format: tar.gz
+    formats:
+      - tar.gz
     format_overrides:
       - goos: windows
-        format: zip
+        formats:
+          - zip
     files:
       - LICENSE
       - CHANGELOG.md
