--- a/project/.goreleaser.yml.j2
+++ b/project/.goreleaser.yml.j2
@@ -15,7 +15,7 @@ builds:
         -s -w
         -X "{{module_name}}/internal/version.Version={% raw %}{{ .Tag }}{% endraw %}"
         -X "{{module_name}}/internal/version.GitCommit={% raw %}{{ .ShortCommit }}{% endraw %}"
-        -X "{{module_name}}/internal/version.BuildDate={{% raw %}{ .CommitDate }}{% endraw %}"
+        -X "{{module_name}}/internal/version.BuildDate={{% raw %}{{ .CommitDate }}{% endraw %}"
     goos:
       - linux
       - darwin
@@ -178,7 +178,7 @@ release:
   name_template: {% raw %}"v{{.Version}}"{% endraw %}
 
   footer: |
-      **Full Changelog**: https://github.com/{{ author_gh_username }}/{{ project_name }}/compare/{{ .PreviousTag }}...{{ .Tag }}
+      **Full Changelog**: https://github.com/{{ author_gh_username }}/{{ project_name }}/compare/{% raw %}{{ .PreviousTag }}...{{ .Tag }}{% endraw %}
 
       Your feedback is more than welcome, feel free to open issues/discussions.
       You can reach out to the team using:
