--- a/project/.goreleaser.yml.j2
+++ b/project/.goreleaser.yml.j2
@@ -15,7 +15,7 @@ builds:
         -s -w
         -X "{{module_name}}/internal/version.Version={% raw %}{{ .Tag }}{% endraw %}"
         -X "{{module_name}}/internal/version.GitCommit={% raw %}{{ .ShortCommit }}{% endraw %}"
-        -X "{{module_name}}/internal/version.BuildDate={{% raw %}{{ .CommitDate }}{% endraw %}"
+        -X "{{module_name}}/internal/version.BuildDate={% raw %}{{ .CommitDate }}{% endraw %}"
     goos:
       - linux
       - darwin
