Added deps update to changelog

--- a/project/.goreleaser.yml.j2
+++ b/project/.goreleaser.yml.j2
@@ -85,7 +85,7 @@ changelog:
       regexp: '^.*?(sec|upgrade)(\(.*\))?:.*$'
       order: 4
     - title: '🔒 Security'
-      regexp: '^.*?:lock:.+'
+      regexp: '^.*?:(lock|arrow_up):.+'
       order: 4
     - title: '📖 Docs'
       regexp: '^.*?(doc|docs)(\(.*\))?:.*$'
